# fpse2023

./: .gitignore  README.md  dune-project  fpse2023_raytracer.opam
example_input/: command.md  demo_multiple_light_sphere_triangle_reflection.json  emission_sphere_material_test_no_light.json  input1.json  input2.json  multiple_light_sphere_triangle_reflection.json  no_reflection_no_refraction.json  reflection_and_refraction.json  reflection_no_refraction.json  transparent_no_refraction.json  two_spheres.json
lib/: camera.ml  camera.mli  color.ml  color.mli  directional_light.ml  directional_light.mli  dune  light.ml  light.mli  output.ml  output.mli  parse.ml  parse.mli  pointLight.ml  pointLight.mli  point_light.ml  point_light.mli  point_light.mli.txt  ray.ml  ray.mli  scene.ml  scene.ml.txt  scene.mli  shape.ml  shape.mli  sphere.ml  sphere.mli  triangle.ml  triangle.mli  vector.ml  vector.mli
output/: emission_sphere_material_test_no_light.ppm  multiple_light_sphere_triangle_reflection.ppm  multiple_sphere_with_sky.ppm  no_reflection_no_refraction.ppm  out1.ppm  out_no_antialiasing.ppm  out_with_antialiasing.ppm  reflection_and_refraction.ppm  reflection_only.ppm  test_multiple_sphere_with_sky.ppm  test_multiple_sphere_with_sky_multi_thread.ppm  test_no_reflection_no_refraction.ppm  test_no_reflection_no_refraction_multi_thread.ppm  test_reflection_and_refraction.ppm  test_reflection_and_refraction_multi_thread.ppm  test_reflection_no_refraction.ppm  test_reflection_no_refraction_multi_thread.ppm  test_transparent_no_refraction.ppm  test_transparent_no_refraction_multi_thread.ppm  transparent_no_refraction.ppm  with_antialiasing.ppm  without_antialiasing.ppm
test/: dune  tests.ml
